# codegpt

./: .gitignore  README.md  codegpt.py  pyproject.toml  troubleshooting.ipynb
codegpt/: app.py  codegpt.py  codegpt.py.old  doc.py  files.py  gpt_interface.py  main.py  obsidian_canvas.yml  parse.py  prompts.py  readme.md  refactor.py  todos.py  troubleshooting.ipynb  unsafe.py
codegpt/commands/: generate.py  gpt_interface.py  handle_input.py  refactor.py  todos.py  unsafe.py
docs/codegpt/: __main__.py.md  files.py.md  gpt_interface.py.md  parse.py.md  prompts.py.md  readme.md.md
example/: codegpt.py
example/gen docs/: README.md  generate.md  main.py.md
example/unsafe edit/: README.md  codegpt.py  codegpt.py.old
next/: files.py  gpt_interface.py  main.py  prompts.py  tests.py
tests/: _conftest.py  nope.py  test_edit_file.py
