[tool.poetry]
name = "codegpt"
version = "0.2.12"
license = "GPL-3.0-or-later"
description = "A CLI tool for refactoring code using OpenAI's models"
authors = ["John Partee"]
repository = "https://github.com/morganpartee/codegpt"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
openai = "^0.2"
typer = {extras = ["all"], version = "^0.7.0"}
pydantic = "^1.10.2"

[tool.poetry.dev-dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
codegpt = "codegpt.main:app"
